# snipeit-mcp-chat

./: .env.example  .gitignore  README.md  build.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: docker.yml
chat/: Dockerfile  app.py  chainlit.md  pyproject.toml
chat/.chainlit/: config.toml
mcp/: Dockerfile  asset_thumbnail_tool.py
webui/: Dockerfile  entrypoint.sh  proxy.js
webui/workspace-template/: CLAUDE.md
webui/workspace-template/knowledge/: categories.md  conventions.md  decisions.md  locations.md  manufacturers.md
