[project]
name = "snipeit-chat"
version = "0.1.0"
description = "Chainlit chat app for Snipe-IT via MCP + Claude"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=1.3,<3",
  "anthropic>=0.39",
  "mcp>=1.2",
  "aiosqlite>=0.19",
  "sqlalchemy[asyncio]>=2.0",
  "greenlet>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
